# LLMGateway

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: gateway.yaml  providers.yaml  routes.yaml
src/llm_gateway/: __init__.py  main.py  settings.py
src/llm_gateway/api/: deps.py  errors.py
src/llm_gateway/api/v1/: chat.py  health.py  models.py
src/llm_gateway/core/: __init__.py  dispatcher.py  errors.py  router.py  schemas.py
src/llm_gateway/observability/: __init__.py  logging.py
src/llm_gateway/policy/: __init__.py  auth.py
src/llm_gateway/providers/: __init__.py  base.py  mock.py  openai_compatible.py
src/llm_gateway/utils/: ids.py  tokens.py
tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_models.py  test_request_logging.py
